--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "nuxt": "^3.7.3"
   },
   "dependencies": {
-    "@nuxt/ui": "^2.8.1",
-    "@pinia/nuxt": "^0.4.11",
-    "pinia": "^2.1.6"
+    "@nuxt/ui": "^2.8.1"
   },
   "overrides": {
     "vue": "latest"
